--- a/pom.xml
+++ b/pom.xml
@@ -2,76 +2,77 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>org.planit.parentpom</groupId>
-    <artifactId>PLANitParentPom</artifactId>
-    <version>0.2.1a1</version>
-  </parent>
+	<parent>
+		<groupId>org.planit.parentpom</groupId>
+		<artifactId>planit-parentpom</artifactId>
+		<version>0.2.1a1</version>
+	</parent>
 
 	<groupId>org.planit.matsim</groupId>
-	<artifactId>PLANitMatsim</artifactId>
+	<artifactId>planit-matsim</artifactId>
 	<description>Matsim writer for PLANit networks</description>
 	<packaging>jar</packaging>
 
-	<name>PLANitMatsim</name>
-  <url>https://github.com/TrafficPLANit/PlanitMatsim</url>
-  
-  <!-- license based on the one published on the website -->
-  <licenses>
-    <license>
-      <name>PLANit license based on modified BSD</name>
-      <url>${planit.website.url}/docs/licenses/LICENSE.txt</url>
-      <distribution>repo</distribution>
-      <comments>A slightly modified version of a modified BSD license</comments>
-    </license>
-  </licenses>
+	<name>planit-matsim</name>
+	<url>https://github.com/TrafficPLANit/PlanitMatsim</url>
+
+	<!-- license based on the one published on the website -->
+	<licenses>
+		<license>
+			<name>PLANit license based on modified BSD</name>
+			<url>${planit.website.url}/docs/licenses/LICENSE.txt</url>
+			<distribution>repo</distribution>
+			<comments>A slightly modified version of a modified BSD license</comments>
+		</license>
+	</licenses>
 
 	<dependencies>
 
 		<!-- version inherited from parent -->
 		<dependency>
 			<groupId>org.planit</groupId>
-			<artifactId>PLANit</artifactId>
-		</dependency>		
-   
+			<artifactId>planit-core</artifactId>
+		</dependency>
+
 		<dependency>
-		  <groupId>junit</groupId>
-		  <artifactId>junit</artifactId>
-		  <!-- only used locally for testing so not an actual dependency for using the API -->
-		  <optional>true</optional>
-		</dependency> 
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<!-- only used locally for testing so not an actual dependency for using 
+				the API -->
+			<optional>true</optional>
+		</dependency>
 
 	</dependencies>
 
 	<build>
 
-      <resources>
-          <resource>
-              <directory>src/main/resources</directory>
-              <excludes>
-                <!-- only used for internal formatting of logging statements -->
-                  <exclude>*.properties</exclude>
-              </excludes>
-          </resource>
-      </resources>
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+				<excludes>
+					<!-- only used for internal formatting of logging statements -->
+					<exclude>*.properties</exclude>
+				</excludes>
+			</resource>
+		</resources>
 
 		<plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>     
-        <artifactId>maven-source-plugin</artifactId>
-      </plugin>   
-    
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-dependency-plugin</artifactId>
-      </plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+			</plugin>
 
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-jar-plugin</artifactId>
-      </plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+			</plugin>
 
-	
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+			</plugin>
+
+
 		</plugins>
 	</build>
 
