--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,12 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.planit.parentpom</groupId>
+		<groupId>org.goplanit.parentpom</groupId>
 		<artifactId>planit-parentpom</artifactId>
 		<version>0.2.1a1</version>
 	</parent>
 
-	<groupId>org.planit.matsim</groupId>
+	<groupId>org.goplanit.matsim</groupId>
 	<artifactId>planit-matsim</artifactId>
 	<description>Matsim writer for PLANit networks</description>
 	<packaging>jar</packaging>
@@ -30,7 +30,7 @@
 
 		<!-- version inherited from parent -->
 		<dependency>
-			<groupId>org.planit</groupId>
+			<groupId>org.goplanit</groupId>
 			<artifactId>planit-core</artifactId>
 		</dependency>
 
