--- a/pom.xml
+++ b/pom.xml
@@ -76,4 +76,13 @@
 		</plugins>
 	</build>
 
+	<repositories>
+		<!-- PLANit repository to obtain parentpom from-->
+		<repository>
+			<id>planit-repository.goplanit.org</id>
+			<name>PLANit Repository</name>
+			<url>https://repository.goplanit.org</url>
+		</repository>
+	</repositories>
+
 </project>
