--- a/pom.xml
+++ b/pom.xml
@@ -35,9 +35,9 @@
 		</dependency>
 
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<scope>test</scope>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-engine</artifactId>
+			<optional>true</optional>
 		</dependency>
 
 	</dependencies>
